--- a/TeachCode/app/src/main/AndroidManifest.xml
+++ b/TeachCode/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".TeacherLogin"></activity>
+        <activity android:name=".UserProfile"></activity>
         <activity android:name=".Login" />
         <activity android:name=".Register">
             <intent-filter>
