updated menu options

--- a/TeachCode/app/src/main/AndroidManifest.xml
+++ b/TeachCode/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Quiz"></activity>
+        <activity android:name=".Setting"></activity>
+        <activity android:name=".Progress" />
+        <activity android:name=".Quiz" />
         <activity android:name=".LessonFive" />
         <activity android:name=".LessonFour" />
         <activity android:name=".LessonThree" />
