Fixed the bugs with the teacher login, and added a list of students to the teacher

--- a/TeachCode/app/src/main/AndroidManifest.xml
+++ b/TeachCode/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Setting"></activity>
+        <activity android:name=".TeacherHome"></activity>
+        <activity android:name=".Setting" />
         <activity android:name=".Progress" />
         <activity android:name=".Quiz" />
         <activity android:name=".LessonFive" />
